# msg

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  index.html  msg.cabal
app/: Main.hs
app/client/: .gitignore  LICENSE  README.md  bower.json
app/client/src/: JSON.js  JSON.purs  Main.js  Main.purs  Types.purs
app/server/: Main.hs
server/: Main.hs
src/: Run.hs  Types.hs  User.hs
src/Msg/: Types.hs
src/Msg/Server/: Run.hs  Types.hs  User.hs
