name:                msg
version:             0.1.0.0
synopsis:            Messaging app
description:         Please see README.md
homepage:            https://gitlab.com/gilmi/msg
license:             BSD3
license-file:        LICENSE
author:              Gil Mizrahi
maintainer:          gilmi@posteo.net
copyright:           Copyright: (c) 2017 Gil Mizrahi
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
     Types
  build-depends:
     base >= 4.7 && < 5
    ,containers
    ,text
    ,bytestring
    ,transformers
    ,mtl
    ,parallel
    ,stm
    ,network
    ,cereal
    ,thyme
    ,process
    ,typed-process
    ,optparse-applicative
    ,ansi-terminal

  default-extensions:
      ConstraintKinds
      DataKinds
      DeriveFunctor
      EmptyDataDecls
      FlexibleContexts
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      PatternGuards
      PatternSynonyms
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TupleSections
      ViewPatterns


executable msg-server
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      server
  main-is:             Main.hs
  build-depends:       base
                     , msg

executable msg-client
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , msg

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , msg
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://gitlab.com/gilmi/msg
