name:                msg
version:             0.1.0.0
synopsis:            Messaging app
description:         Please see README.md
homepage:            https://github.com/soupi/msg
license:             BSD3
license-file:        LICENSE
author:              Gil Mizrahi
maintainer:          gilmi@posteo.net
copyright:           Copyright: (c) 2018 Gil Mizrahi
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
     Msg.Types
     Msg.Server.Types
     Msg.Server.User
     Msg.Server.Run
  build-depends:
     base >= 4.7 && < 5
    ,containers
    ,text
    ,bytestring
    ,aeson
    ,stm
    ,async
    ,network
    ,websockets

  default-extensions:
      ConstraintKinds
      DataKinds
      DeriveFunctor
      EmptyDataDecls
      FlexibleContexts
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      PatternGuards
      PatternSynonyms
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TupleSections
      ViewPatterns


executable msg-server
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app/server
  main-is:             Main.hs
  build-depends:       base
                     , msg

source-repository head
  type:     git
  location: https://github.com/soupi/msg
